--- a/src/app/nested-components/bytesize-icon/bytesize-icon.component.html
+++ b/src/app/nested-components/bytesize-icon/bytesize-icon.component.html
@@ -17,6 +17,10 @@
     <ng-container *ngSwitchCase="'i-trash'">
       <svg:path d="M28 6 L6 6 8 30 24 30 26 6 4 6 M16 12 L16 24 M21 12 L20 24 M11 12 L12 24 M12 6 L13 2 19 2 20 6" />
     </ng-container>
+    <ng-container *ngSwitchCase="'i-settings'">
+      <svg:path d="M13 2 L13 6 11 7 8 4 4 8 7 11 6 13 2 13 2 19 6 19 7 21 4 24 8 28 11 25 13 26 13 30 19 30 19 26 21 25 24 28 28 24 25 21 26 19 30 19 30 13 26 13 25 11 28 8 24 4 21 7 19 6 19 2 Z" />
+      <svg:circle cx="16" cy="16" r="4" />
+    </ng-container>
     <ng-container *ngSwitchDefault>
       <ng-content></ng-content>
     </ng-container>
