--- a/src/app/nested-components/bytesize-icon/bytesize-icon.component.html
+++ b/src/app/nested-components/bytesize-icon/bytesize-icon.component.html
@@ -21,6 +21,15 @@
       <svg:path d="M13 2 L13 6 11 7 8 4 4 8 7 11 6 13 2 13 2 19 6 19 7 21 4 24 8 28 11 25 13 26 13 30 19 30 19 26 21 25 24 28 28 24 25 21 26 19 30 19 30 13 26 13 25 11 28 8 24 4 21 7 19 6 19 2 Z" />
       <svg:circle cx="16" cy="16" r="4" />
     </ng-container>
+    <ng-container *ngSwitchCase="'i-menu'">
+      <svg:path d="M4 8 L28 8 M4 16 L28 16 M4 24 L28 24" />
+    </ng-container>
+    <ng-container *ngSwitchCase="'i-plus'">
+      <svg:path d="M16 2 L16 30 M2 16 L30 16" />
+    </ng-container>
+    <ng-container *ngSwitchCase="'i-import'">
+      <svg:path d="M28 22 L28 30 4 30 4 22 M16 4 L16 24 M8 16 L16 24 24 16" />
+    </ng-container>
     <ng-container *ngSwitchDefault>
       <ng-content></ng-content>
     </ng-container>
