--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,54 +5,44 @@
     </a>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" pageScroll [pageScrollOffset]="56" [pageScrollEasing]="easeInOutExpoEasing" href="#top">Home</a>
+        <a class="nav-link" pageScroll [pageScrollEasing]="easeInOutExpoEasing" href="#top">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" pageScroll [pageScrollOffset]="56" [pageScrollEasing]="easeInOutExpoEasing" href="#commands">Commands</a>
+        <a class="nav-link" pageScroll [pageScrollEasing]="easeInOutExpoEasing" href="#commands">Commands</a>
       </li>
       <!-- <li class="nav-item">
-        <a class="nav-link" pageScroll [pageScrollOffset]="56" [pageScrollEasing]="easeInOutExpoEasing" href="#examples">Examples</a>
+        <a class="nav-link" pageScroll [pageScrollEasing]="easeInOutExpoEasing" href="#examples">Examples</a>
       </li> -->
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-hover-light" pageScroll [pageScrollOffset]="56" [pageScrollEasing]="easeInOutExpoEasing" href="#commands"
-          (click)="onNew(); commandForm.form.reset(); commandModal.show();" tooltip="New" placement="bottom" [delay]="500">
+        <a class="nav-link text-hover-light" pageScroll [pageScrollEasing]="easeInOutExpoEasing" href="#commands"
+          (click)="onNew(); commandForm.form.reset(); commandModal.show();">
           <app-bytesize-icon id="i-plus" size="22" stroke="2"></app-bytesize-icon>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-hover-light" (click)="import(selectItem('openFile', jsonFilter))" tooltip="Import" placement="bottom" [delay]="500">
+        <a class="nav-link text-hover-light" (click)="import(selectItem('openFile', jsonFilter))">
           <app-bytesize-icon id="i-import" size="22" stroke="2"></app-bytesize-icon>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link text-hover-light" pageScroll [pageScrollOffset]="56" [pageScrollEasing]="easeInOutExpoEasing" href="#commands"
-          tooltip="Filter" placement="bottom" [delay]="500">
+      <li class="nav-item d-flex flex-row text-hover-light">
+        <a class="nav-link" pageScroll [pageScrollEasing]="easeInOutExpoEasing" href="#commands" (click)="showFilter = true; searchInput.focus();">
           <app-bytesize-icon id="i-search" size="22" stroke="2"></app-bytesize-icon>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-hover-light" (click)="configModal.show();" tooltip="Configuration" placement="bottom" [delay]="500">
+        <a class="nav-link text-hover-light" (click)="configModal.show();">
           <app-bytesize-icon id="i-settings" size="22" stroke="2"></app-bytesize-icon>
         </a>
       </li>
     </ul>
-    <!--
-      <div class="input-group mr-2">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <app-bytesize-icon id="i-search"></app-bytesize-icon>
-          </div>
-        </div>
-        <input [(ngModel)]="keyword" (ngModelChange)="filter()" class="form-control" type="search" placeholder="Filter">
-      </div>
-      -->
   </nav>
+  <input #searchInput [style.opacity]="showFilter || keyword ? '1' : '0'" [(ngModel)]="keyword" (ngModelChange)="filter()" id="searchInput" type="search" autofocus="true" (blur)="showFilter = false">
 </header>
 
 <main>
-  <div id="top" class="full-page d-flex align-items-center justify-content-center">
+  <div *ngIf="!keyword" id="top" class="full-page d-flex align-items-center justify-content-center">
     <div class="content-logo">
       <img alt="" src="assets/script.png">
     </div>
@@ -60,10 +50,10 @@
       <h1 class="font-weight-light mb-3">
         ScriptTrigger<small>v{{getAppVersion()}}</small>
       </h1>
-      <a class="btn btn-outline-primary py-3 mb-3 text-relax" pageScroll [pageScrollOffset]="56" [pageScrollEasing]="easeInOutExpoEasing" href="#commands">GET STARTED</a>
+      <a class="btn btn-outline-primary py-3 mb-3 text-relax" pageScroll [pageScrollEasing]="easeInOutExpoEasing" href="#commands">GET STARTED</a>
     </div>
   </div>
-  <div id="commands">
+  <div id="commands" class="fixed-padding-top">
     <bs-sortable [(ngModel)]="commands" [itemTemplate]="itemTemplate" (drop)="afterSort()" wrapperClass="list-group list-group-flush"
       itemClass="sortable-item list-group-item list-group-item-action flex-column align-items-start"></bs-sortable>
 
