--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
+@import "node_modules/bootstrap/scss/_functions";
+@import "node_modules/bootstrap/scss/_variables";
+
 .clickable {
   cursor: pointer;
 }
@@ -32,6 +35,25 @@ button.close {
 
   small {
     font-size: 20%;
+  }
+}
+
+nav {
+  height: 60px;
+}
+
+#searchInput {
+  position: fixed;
+  top: 60px;
+  right: 2px;
+  z-index: $zindex-fixed;
+
+  padding: 9px 20px;
+  border: none;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3); // .z-depth-2
+
+  &:focus {
+    outline: none;
   }
 }
 
@@ -70,4 +92,8 @@ button.close {
 :host-context(.modal-open) .navbar.fixed-top.fixed-padding,
 :host-context(.modal-open) .navbar.fixed-bottom.fixed-padding {
   padding-right: 35px;
+}
+
+.fixed-padding-top {
+  padding-top: 59px;
 }
