--- a/src/app/nested-components/bytesize-icon/bytesize-icon.component.html
+++ b/src/app/nested-components/bytesize-icon/bytesize-icon.component.html
@@ -30,6 +30,9 @@
     <ng-container *ngSwitchCase="'i-import'">
       <svg:path d="M28 22 L28 30 4 30 4 22 M16 4 L16 24 M8 16 L16 24 24 16" />
     </ng-container>
+    <ng-container *ngSwitchCase="'i-chevron-bottom'">
+      <svg:path d="M30 12 L16 24 2 12" />
+    </ng-container>
     <ng-container *ngSwitchDefault>
       <ng-content></ng-content>
     </ng-container>
