--- a/src/app/nested-components/bytesize-icon/bytesize-icon.component.html
+++ b/src/app/nested-components/bytesize-icon/bytesize-icon.component.html
@@ -33,6 +33,9 @@
     <ng-container *ngSwitchCase="'i-chevron-bottom'">
       <svg:path d="M30 12 L16 24 2 12" />
     </ng-container>
+    <ng-container *ngSwitchCase="'i-close'">
+      <svg:path d="M2 30 L30 2 M30 30 L2 2" />
+    </ng-container>
     <ng-container *ngSwitchDefault>
       <ng-content></ng-content>
     </ng-container>
