--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,29 +16,33 @@
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-hover-light" href="#" (click)="onNew(); commandForm.form.reset(); commandModal.show();">
+        <button class="btn btn-link nav-link text-hover-light" (click)="onNew(); commandForm.form.reset(); commandModal.show();">
           <app-bytesize-icon id="i-plus" size="22" stroke="2"></app-bytesize-icon>
-        </a>
+        </button>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-hover-light" href="#" (click)="import(selectItem('openFile', jsonFilter))">
+        <button class="btn btn-link nav-link text-hover-light" (click)="import(selectItem('openFile', jsonFilter))">
           <app-bytesize-icon id="i-import" size="22" stroke="2"></app-bytesize-icon>
-        </a>
+        </button>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-hover-light" href="#" (click)="showFilter = true; searchInput.focus();">
+        <button class="btn btn-link nav-link text-hover-light" (click)="showFilter = true; searchInput.focus();">
           <app-bytesize-icon id="i-search" size="22" stroke="2"></app-bytesize-icon>
-        </a>
+        </button>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-hover-light" href="#" (click)="configModal.show()">
+        <button class="btn btn-link nav-link text-hover-light" (click)="configModal.show()">
           <app-bytesize-icon id="i-settings" size="22" stroke="2"></app-bytesize-icon>
-        </a>
+        </button>
       </li>
     </ul>
   </nav>
-  <input #searchInput [style.opacity]="showFilter || keyword ? '1' : '0'" [(ngModel)]="keyword" (ngModelChange)="filter()"
-    id="searchInput" type="search" autofocus="true" (blur)="showFilter = false">
+  <div id="searchInput" class="has-clear" [@searchState]="showFilter || keyword ? 'show' : 'hide'">
+    <input #searchInput type="search" class="form-control" [(ngModel)]="keyword" (ngModelChange)="filter()" (blur)="showFilter = false">
+    <button class="btn btn-link clear" (click)="keyword = ''; showFilter = false; filter();">
+      <app-bytesize-icon id="i-close" size="14" stroke="3"></app-bytesize-icon>
+    </button>
+  </div>
 </header>
 
 <main>
@@ -52,33 +56,36 @@
       </h1>
       <div class="row">
         <div class="col-6">
-          <a class="btn btn-block btn-primary py-3 mb-3 text-relax text-uppercase" href="#" (click)="onNew(); commandForm.form.reset(); commandModal.show();">
+          <button class="btn btn-block btn-primary py-3 mb-3 text-relax text-uppercase" (click)="onNew(); commandForm.form.reset(); commandModal.show();">
             <app-bytesize-icon id="i-plus"></app-bytesize-icon>
             New Command
-          </a>
+          </button>
         </div>
         <div class="col-6">
-          <a class="btn btn-block btn-outline-primary py-3 mb-3 text-relax text-uppercase" href="#" (click)="configModal.show()">
+          <button class="btn btn-block btn-outline-primary py-3 mb-3 text-relax text-uppercase" (click)="configModal.show()">
             <app-bytesize-icon id="i-settings"></app-bytesize-icon>
             Settings
-          </a>
+          </button>
         </div>
       </div>
       <div class="row" *ngIf="commands.length > 0">
         <div class="col-12 text-center">
           <a class="btn btn-link py-3 mb-3" pageScroll [pageScrollEasing]="easeInOutExpoEasing" href="#commands">
-            <small class="text-muted mr-3"><app-bytesize-icon id="i-chevron-bottom"></app-bytesize-icon></small>View Existing Commands
+            <small class="text-muted mr-3">
+              <app-bytesize-icon id="i-chevron-bottom"></app-bytesize-icon>
+            </small>View Existing Commands
           </a>
         </div>
       </div>
     </div>
   </div>
+
   <div *ngIf="commands && commands.length > 0" id="commands" class="fixed-padding-top">
     <bs-sortable [(ngModel)]="commands" [itemTemplate]="itemTemplate" (drop)="afterSort()" wrapperClass="list-group list-group-flush"
       itemClass="sortable-item list-group-item list-group-item-action flex-column align-items-start"></bs-sortable>
 
-    <button type="button" class="btn btn-block btn-outline-danger border-0 rounded-0 py-4" mwlConfirmationPopover
-      popoverTitle="Are you sure?" popoverMessage="Reset all Runs and Last run statistics" placement="top" (confirm)="resetAllStats()">Reset Runs</button>
+    <button type="button" class="btn btn-block btn-outline-danger border-0 rounded-0 py-4" mwlConfirmationPopover popoverTitle="Are you sure?"
+      popoverMessage="Reset all Runs and Last run statistics" placement="top" (confirm)="resetAllStats()">Reset Runs</button>
   </div>
 </main>
 
@@ -92,13 +99,13 @@
     </div>
     <div class="d-flex w-100 align-items-center">
       <pre class="my-1 mr-3"><code highlight [code]="item.value.script"></code></pre>
-      <button type="button" tooltip="Edit" class="btn btn-light rounded-0 showOnHover text-muted text-hover-warning" (click)="onEdit(item.value); commandModal.show();">
+      <button type="button" class="btn btn-light rounded-0 showOnHover text-muted text-hover-warning" (click)="onEdit(item.value); commandModal.show();">
         <app-bytesize-icon id="i-edit"></app-bytesize-icon>
       </button>
-      <!-- <button type="button" class="btn btn-light rounded-0 showOnHover text-muted" (click)="onDuplicate(item.value); commandModal.show();" tooltip="Duplicate">
+      <!-- <button type="button" class="btn btn-light rounded-0 showOnHover text-muted" (click)="onDuplicate(item.value); commandModal.show();">
         <app-bytesize-icon id="i-clipboard"></app-bytesize-icon>
       </button> -->
-      <button type="button" tooltip="Delete" class="btn btn-light rounded-0 showOnHover text-muted text-hover-danger mr-3" mwlConfirmationPopover
+      <button type="button" class="btn btn-light rounded-0 showOnHover text-muted text-hover-danger mr-3" mwlConfirmationPopover
         popoverTitle="Are you sure?" popoverMessage="Delete '{{item.value.name}}' permanently" (confirm)="delete(item.value)">
         <app-bytesize-icon id="i-trash"></app-bytesize-icon>
       </button>
@@ -232,7 +239,7 @@
                   </div>
                 </div>
                 <small class="form-text text-muted">Activate command by voice, file name default to computer name:
-                  <a class="text-muted" placement="bottom" tabindex="-1" href="#" (click)="openItem(storeService.getWatchFilePath())" [tooltip]="storeService.getWatchFilePath()"
+                  <a class="text-muted" placement="bottom" tabindex="-1" (click)="openItem(storeService.getWatchFilePath())" [tooltip]="storeService.getWatchFilePath()"
                     containerClass="nowrap">
                     {{storeService.getWatchFileName()}}
                     <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
@@ -247,8 +254,8 @@
                   <input [(ngModel)]="configuration.pushbulletApiKey" type="text" class="form-control" id="inputPushbulletApiKey" name="inputPushbulletApiKey">
                 </div>
                 <small class="form-text">
-                  <a class="text-muted" placement="bottom" tabindex="-1" href="https://www.pushbullet.com/#settings/account"
-                    tooltip="https://www.pushbullet.com/#settings/account" containerClass="nowrap">
+                  <a class="text-muted" placement="bottom" tabindex="-1" href="https://www.pushbullet.com/#settings/account" tooltip="https://www.pushbullet.com/#settings/account"
+                    containerClass="nowrap">
                     Pushbullet > Settings > Create Access Token
                     <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
                   </a>
@@ -266,7 +273,7 @@
                 </div>
                 <small class="form-text text-muted">
                   Default to
-                  <a class="text-muted" placement="bottom" tabindex="-1" href="#" (click)="openItem(storeService.getConfigLocation())" [tooltip]="storeService.getConfigLocation()"
+                  <a class="text-muted" placement="bottom" tabindex="-1" (click)="openItem(storeService.getConfigLocation())" [tooltip]="storeService.getConfigLocation()"
                     containerClass="nowrap">
                     User AppData folder
                     <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
